style.css
*,*::before, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;;
}

@font-face {
    font-family: luckiest;
    src: url('./fonts/Luckiest_Guy/LuckiestGuy-Regular.ttf');
}

body{
    background-color: #000000;
}



.page{
    background-color: #A3F9FF ;
    margin:auto;
    width: 80vw;
    height: 100vh;
    position: relative;
}

.main{
    position: absolute;
    bottom: 0;
    background-image: url("./img/web/zebra-crossing.png");
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;    
    width: 100%;
    height: 80%;
    z-index: 1;
}

.car{
    position: absolute;
    background-image: url(./img/web/frontCar.png);
    background-repeat: no-repeat; 
    width: 129px;
    height: 30%;
    top: 38%;
    left: 40%;    
    z-index: 2;    
}

.logo{    
    position: absolute;
    background-image: url(./img/web/chilling_frog.png);
    background-repeat: no-repeat; 
    width: 580px;
    height: 30%;
    top: 50%;
    left: 25%;    
    z-index: 2;    
}


.game {
    display: none;
}

.start{
    margin-top: 5vh;
    text-align: center;
}

.start button{            
        padding: 20px 40px;            
}

.container {
    text-align:center;
}
#myCanvas {        
    margin-top: 5vh;    
    width: 700px;
    height: 500px;
    border:1px solid #000000;
}

